# wow-optimize

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  inject.bat
src/: dllmain.cpp
